@@ -9,6 +9,7 @@ export(FT)
 export(GQ)
 export(html5)
 export(LL)
+export(md2docx)
 export(new_report)
 export(notes)
 export(pad)
