@@ -1,13 +1,18 @@
 \name{tex2docx}
+\alias{md2docx}
 \alias{tex2docx}
-\title{Convert tex to docx}
+\title{Convert tex/markdown to docx}
 \usage{
   tex2docx(in.file = NULL, out.file = NULL,
     path = paste0(getwd(), "/REPORT"),
     bib.loc = getOption("bib.loc"))
+
+  md2docx(in.file = NULL, out.file = NULL,
+    path = paste0(getwd(), "/REPORT"),
+    bib.loc = getOption("bib.loc"))
 }
 \arguments{
-  \item{in.file}{A character vector of the md file.}
+  \item{in.file}{A character vector of the tex/md file.}
 
   \item{out.file}{A character vector of the outfile.  If
   \code{"replace"} over writes the original HTML file.
@@ -17,20 +22,25 @@
   \item{path}{The path to where the documents reside/should
   be created. Default is the REPORT directory.  This
   conveniently allows for non paths to be supplied to
-  \code{in.file} and \code{out.file}.  Paths can be
-  supplied to \code{in.file} and \code{out.file} by setting
-  \code{path} to \code{NULL}.}
+  \code{in.file} and \code{out.file} (i.e., just the file
+  names).  Paths can be supplied to \code{in.file} and
+  \code{out.file} by setting \code{path} to \code{NULL}.}
 
   \item{bib.loc}{Optional path to a .bib resource.}
 }
 \description{
   Use \href{pandoc}{http://johnmacfarlane.net/pandoc/} to
-  convert tex to docx for those colleagues who use docx.
+  convert tex/markdown to docx for those colleagues who use
+  docx.
 }
 \details{
   The user must have pandoc installed and on their path.
   pandoc can be installed from: \cr
   \href{http://johnmacfarlane.net/pandoc/installing.html}{http://johnmacfarlane.net/pandoc/installing.html}
+}
+\note{
+  \code{md2docx} converts markdown (a .md file) not
+  Rmarkdown (.Rmd). Use knitr to knit to HTML first.
 }
 \examples{
 \dontrun{
